<resources>
    <string name="app_name">Project_Mobile</string>
    <string name="mail">Mail</string>
    <string name="calendar">Calendar</string>
    <string name="contacts">Contacts</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="searchbar">SearchBar</string>
    <string name="edit">Edit</string>

    <string name="myContacts">My contacts</string>
    <string name="contactpersons">Contacts</string>
    <string name="skypeContacts">Skype-contacts</string>
    <string name="feedback">Feedback</string>

    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <string name="save">Save</string>
    <string name="addContactTitle">Add a contact</string>
    <string name="nameTitle">Name</string>
    <string name="nameInput">First name</string>
    <string name="lastNameInput">Last name</string>
    <string name="emailTitle">E-mail</string>
    <string name="emailInput">E-mail</string>
    <string name="phoneTitle">Phone</string>
    <string name="phoneInput">Mobile Phone</string>
    <string name="workTitle">Work</string>
    <string name="workInput">Company</string>

    <string name="heyboo">Hey Boo!</string>

    <string name="addEventTitle">Add an event</string>
    <string name="eventTitle">Event</string>
    <string name="locationTitle">Location</string>
    <string name="startTitle">Start</string>
    <string name="durationTitle">Duration</string>
    <string name="moreDetailsButton">More details</string>
    <string name="reminderTitle">Reminder</string>
    <string name="displayAsTitle">Show as</string>
    <string name="repeatTitle">Repeat</string>
    <string name="attendeesTitle">Attendees</string>

    <string name="yourAgendas">Your agendas</string>
    <string name="agenda">Agenda</string>
    <string name="holidays">Holidays in Belgium</string>
    <string name="birthdays">Bithdays</string>
    <string name="otherAgendas">Other agendas</string>
    <string name="peopleAgendas">Other peoples agendas</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>


    <string name="addressTitle">Address</string>
    <string name="streetName">Street</string>
    <string name="postalCode">Postal Code</string>
    <string name="cityName">City</string>
    <string name="stateName">State/Province</string>
    <string name="countryName">Country</string>

    <string name="notesTitle">Notes</string>
    <string name="personalNotes">Notes...</string>

    <string name="nickNameTitle">Nickname</string>
    <string name="nickName">Nickname</string>

    <string name="spouseNameTitle">Spouse</string>
    <string name="spouseName">Spouse Name</string>

    <string name="birthdayTitle">Birthday</string>
    <string name="birthday">Birthday</string>

    <string name="webpageTitle">Webpage</string>
    <string name="webpage">Webpage</string>

    <string name="genderTitle">Gender</string>
    <string name="gender">Gender</string>

    <string name="listEvents">listEvents</string>

    <string name="firstNameTitle">First name *</string>
    <string name="lastNameTitle">Last name *</string>
    <string name="middleNameTitle">Middle name</string>
    <string name="titleTitle">Title</string>
    <string name="suffixTitle">Suffix</string>
    <string name="yomiFirstNameTitle">Yomi first name</string>
    <string name="yomiLastNameTitle">Yomi last name</string>
    <string name="displayAsTitle1">Display as</string>
    <string name="emailTitleInput">E-mail</string>
    <string name="businessPhoneTitle">Business</string>
    <string name="businessPhoneTitle2">Business 2</string>
    <string name="homePhoneTitle">Home</string>
    <string name="homePhoneTitle2">Home 2</string>
    <string name="mobilePhoneTitle">Mobile</string>
    <string name="mobilePhoneTitle2">Mobile 2</string>
    <string name="emailTitleInput2">E-mail 2</string>
    <string name="emailTitleInput3">E-mail 3</string>
    <string name="jobTitle">Job title</string>
    <string name="department">Department</string>
    <string name="companyName">Company Name</string>
    <string name="officeLocation">Office Location</string>
    <string name="manager">Manager</string>
    <string name="assistantName">Assistant Name</string>
    <string name="departmentTitle">Department</string>
    <string name="companyNameTitle">Company</string>
    <string name="officeLocationTitle">Office location</string>
    <string name="managerTitle">Manager</string>
    <string name="assistantTitle">Assistant</string>
    <string name="streetNameTitle">Street</string>
    <string name="postalCodeTitle">ZIP/Postal code</string>
    <string name="cityNameTitle">City</string>
    <string name="stateTitle">State</string>
    <string name="countryTitle">Country/Region</string>

    <string name="inbox">Inbox</string>

    <string name="editContactTitle">Edit contact</string>

    <string name="loadingTitle">Starting uMail...</string>

    <string name="appName">uMail</string>

    <string name="editEventTitle">Edit Event</string>

    <string name="eventSubject">Event Subject</string>
    <string name="eventWhen">When: </string>
    <string name="eventWhere">Where: </string>

    <string name="toTextView">To:</string>

    <string name="markAsPrivateTextView">Mark as private</string>
    <string name="responseTextView">Request responses</string>

    <string name="notesTextView">Notes</string>
    <string name="title_activity_test">test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="yomiName">Yomi name</string>
    <string name="yomiCompanyTitle">Yomi company name</string>
    <string name="imTitle">IM</string>
    <string name="businessAddressTitle">Business</string>
    <string name="otherTitle">Other</string>
    <string name="homeAddressTitle">Home</string>

    <string name="addUser">Add user</string>

    <string name="markUnread">Mark as unread</string>
    <string name="forward">Forward</string>
    <string name="replyAll">Reply all</string>
    <string name="markJunk">Mark as junk</string>

    <string name="createContactFolder">Create contact folder</string>
    <string name="createMailFolder">Create mail folder</string>

    <string name="futureEvents">Only future events</string>
    <string name="allEvents">All events</string>
    <string name="title_activity_recipient_from_contacts">RecipientFromContactsActivity</string>

</resources>