<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/myContacts"
            android:title="@string/myContacts"
            android:textColor="@color/black"
            />

        <item
            android:id="@+id/contacts"
            android:title="@string/contactpersons"
            android:textColor="@color/black"
            />

        <item
            android:id="@+id/skypeContacts"
            android:title="@string/skypeContacts"
            android:textColor="@color/black"
            />

    </group>

    <item android:title="">
        <menu>
             <item
                android:id="@+id/feedback"
                 android:title="@string/feedback"
                android:icon="@drawable/ic_mail"
                 android:textColor="@color/black"
            ></item>
        </menu>
    </item>

</menu>