<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.keiichi.project_mobile.Contacts.AddContactActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/action_bar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:paddingTop="50dp">
        <!--Put form controls here-->

        <TextView
            android:id="@+id/addContactTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addContactTitle"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="15pt">
        </TextView>

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameTitle"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/firstNameInput"
            android:layout_height="37dp"
            android:hint="@string/nameInput"
            android:inputType="textCapSentences|textPersonName"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/edit_text_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/lastNameInput"
            android:layout_height="37dp"
            android:hint="@string/lastNameInput"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textCapSentences|textPersonName"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent">
        </EditText>

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailTitle"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/emailInput"
            android:layout_height="37dp"
            android:hint="@string/emailInput"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textCapSentences|textPersonName"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent">
        </EditText>

        <TextView
            android:id="@+id/phoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneTitle"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/phoneInput"
            android:layout_height="37dp"
            android:hint="@string/phoneInput"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textCapSentences|textPersonName"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent">
        </EditText>


        <TextView
            android:id="@+id/workTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workTitle"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/jobTitle"
            android:layout_height="37dp"
            android:hint="@string/jobTitle"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textCapSentences|textPersonName"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/department"
            android:layout_height="37dp"
            android:hint="@string/department"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textCapSentences|textPersonName"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/companyName"
            android:layout_height="37dp"
            android:hint="@string/companyName"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:inputType="textCapSentences|textPersonName"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/officeLocation"
            android:layout_height="37dp"
            android:hint="@string/officeLocation"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:inputType="textCapSentences|textPersonName"
            android:background="@drawable/edit_text_style"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/manager"
            android:layout_height="37dp"
            android:hint="@string/manager"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textCapSentences|textPersonName"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/assistantName"
            android:layout_height="37dp"
            android:hint="@string/assistantName"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textCapSentences|textPersonName"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:layout_width="fill_parent">
        </EditText>

        <TextView
            android:id="@+id/addressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressTitle"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/streetName"
            android:layout_height="37dp"
            android:hint="@string/streetName"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/postalCode"
            android:layout_height="37dp"
            android:hint="@string/postalCode"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:inputType="textCapSentences|textPersonName"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/cityName"
            android:layout_height="37dp"
            android:hint="@string/cityName"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:inputType="textCapSentences|textPersonName"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/stateName"
            android:layout_height="37dp"
            android:hint="@string/stateName"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:inputType="textCapSentences|textPersonName"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/countryName"
            android:layout_height="37dp"
            android:hint="@string/countryName"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:inputType="textCapSentences|textPersonName"
            android:layout_width="fill_parent">
        </EditText>


        <TextView
            android:id="@+id/nickNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickNameTitle"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/nickName"
            android:layout_height="37dp"
            android:hint="@string/nickName"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:inputType="textCapSentences|textPersonName"
            android:layout_width="fill_parent">
        </EditText>

        <TextView
            android:id="@+id/spouseNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spouseNameTitle"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/spouseName"
            android:layout_height="37dp"
            android:hint="@string/spouseName"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:inputType="textCapSentences|textPersonName"
            android:layout_width="fill_parent">
        </EditText>


        <TextView
            android:id="@+id/notesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notesTitle"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/personalNotes"
            android:layout_height="200dp"
            android:hint="@string/personalNotes"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="10"
            android:layout_width="fill_parent">
        </EditText>

    </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
