<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.keiichi.project_mobile.AddContactActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp">
        <!--Put form controls here-->

        <TextView
            android:id="@+id/addEventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addEventTitle"
            android:textStyle="bold"
            android:textSize="15pt">
        </TextView>

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventTitle"
            android:textStyle="bold"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/eventInput"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationTitle"
            android:textStyle="bold"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/locationInput"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>

        <TextView
            android:id="@+id/startTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTitle"
            android:textStyle="bold"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/dateEvent"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="Select Date..."
            android:padding="15dp"
            android:textColor="#897"
            android:textColorHint="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/timeEvent"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="Select Time..."
            android:padding="15dp"
            android:textColor="#897"
            android:textColorHint="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/durationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/durationTitle"
            android:textStyle="bold"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/workInput"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>
